# buddy

./: CODEBUDDY.md  Cargo.toml  LICENSE  README.md
docs/: observability.md  release.md  ssot-registry.md  testing.md
src/: logging.rs  main.rs
